    lookup.  this is to prevent $update from matching a dictionary method if
    there happens to be a dictionary container in the searchlist.  (MO)
  - .webInput() now saves the cgi.FieldStorage() instance in a global
    variable rather than recreating it each call.  That should allow the
    method to be called multiple times with POST variables outside Webware.
    (MO)

0.9.15a3 (Nov 10, 2002)
  - corrected a dictionary bug in the Python version of NameMapper (TR)
  - Rewrote the "cheetah" command (CheetahWrapper.py) again and added test
    cases.  New options --flat and --nobackup; --stdout is now a synonym for
    -p.  See the "cheetah compile" section in the Users' Guide for details.
    Deleted Utils.dualglob: merged into CheetahWrapper.  (MO)
  - .addToSearchList() and .prependToSearchList() are gone.  Instead of 
    adding containers to the searchList after instantiation, pass all the
    containers you need to the constuctor, keep another reference somewhere
    to the containers, and modify the containers directly.  Generic libraries
    that want to add a new kind of information to the searchList (e.g.,
    web variables) should do "self.searchList().insert(0, myContainer)". (MO)

0.9.15a2 (Nov 4th, 2002)
  - Filters now have access to the name of the placeholder they're filtering.
    In the .filter() method, kw['rawExpr'] gives the entire placeholder name
    including subscripts and arguments, exactly as it appears in the template
    definition. (TR)
  - Fix three bugs in "cheetah compile -R": (1) the generated class name 
    contained the subdirectory, (2) the destination path did not contain the
    subdirectory, (3) Cheetah failed to create the destination subdirectory
    if missing.  All subdirectories created have an "__init__.py" file. 
    "cheetah fill -R" does the same thing but does not create 
    "__init__.py". (MO)  NOTE: this is still buggy!
  - New directory "attic" in source contains code that has been abandoned